--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "apexcharts": "^3.49.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2"
